--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -303,7 +303,7 @@ hr.line-separator{
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
     -webkit-animation-delay: 0.8s;
-    animation-delay: 0.8s;
+    animation-delay: 0.3s;
 }
 .in-right {
     -webkit-animation-name: fadeInRight;
@@ -322,8 +322,8 @@ hr.line-separator{
     animation-fill-mode: both;
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
-    -webkit-animation-delay: 0.8s;
-    animation-delay: 0.8s;
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
 }
 .in-bottom {
     -webkit-animation-name: fadeInBottom;
@@ -332,8 +332,8 @@ hr.line-separator{
     animation-fill-mode: both;
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
-    -webkit-animation-delay: 0.8s;
-    animation-delay: 0.8s;
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
 }
 .in{
     -webkit-animation-name: fadeIn;
@@ -1210,7 +1210,7 @@ hr.line-separator{
                 .ser_img-04{
                     position: relative;
                     margin-top: 30px;
-                    &:before{
+/*                    &:before{
                         content: "";
                         position: absolute;
                         width: 200px;
@@ -1240,7 +1240,7 @@ hr.line-separator{
                             width: 150px;
                             height: 150px;
                         }
-                    }
+                    }*/
                 }
             }
         }
