--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -1583,6 +1583,11 @@ input[type="text"] , textarea{
                 transform: rotate(-330deg);
             }
         }
+        &+.block+.block+.block+.block+.block+.block+.block+.block+.block+.block+.block+.block+.block{
+            img{
+                transform: rotate(-350deg);
+            }
+        }
     }
   }
   @media (max-width: 475px){
@@ -1950,6 +1955,48 @@ input[type="text"] , textarea{
     }
     &:nth-child(13) {
       transform: rotate(-30deg);
+    }
+}
+
+ .count14 li {
+    &:nth-child(2) {
+      transform: rotate(29deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(56deg);
+    }
+    &:nth-child(4) {
+      transform: rotate(81deg);
+    }
+    &:nth-child(5) {
+      transform: rotate(106deg);
+    }
+    &:nth-child(6) {
+      transform: rotate(-230deg);
+    }
+    &:nth-child(7) {
+      transform: rotate(-204deg);
+    }
+    &:nth-child(8) {
+      transform: rotate(-178deg);
+    }
+    &:nth-child(9) {
+      transform: rotate(-154deg);
+    }
+    &:nth-child(10) {
+      transform: rotate(-128deg);
+    }
+    &:nth-child(11) {
+      transform: rotate(-103deg);
+    }
+    &:nth-child(12) {
+      transform: rotate(-78deg);
+    }
+    &:nth-child(13) {
+      transform: rotate(-53deg);
+    }
+    &:nth-child(14) {
+      transform: rotate(-27deg);
     }
 }
 
