--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2502,3 +2502,13 @@ input[type="text"] , textarea{
     }
 }
  
+
+.about{
+    .sub-title{
+        font-size: 34px;
+        font-weight: normal;
+        color: #505050;
+        text-align: center;
+        margin: auto;
+    }
+}
