--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2510,5 +2510,6 @@ input[type="text"] , textarea{
         color: #505050;
         text-align: center;
         margin: auto;
+        margin-bottom: 24px;
     }
 }
