--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2504,6 +2504,9 @@ input[type="text"] , textarea{
  
 
 .about{
+    box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
+    background-color: #ffffff;
+    padding: 0 50px;
     .sub-title{
         font-size: 34px;
         font-weight: normal;
