--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -9526,14 +9526,15 @@ input[type="text"], textarea {
 .about {
   box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
   background-color: #ffffff;
-  padding: 0 50px; }
+  padding: 0 60px 30px 0; }
+  .about .page-content {
+    padding-bottom: 20px; }
   .about .sub-title {
     font-size: 34px;
     font-weight: normal;
     color: #505050;
     text-align: center;
-    margin: auto;
-    margin-bottom: 40px; }
+    margin: auto; }
 
 .logo {
   width: 200px; }
