--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -9526,7 +9526,7 @@ input[type="text"], textarea {
 .about {
   box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
   background-color: #ffffff;
-  padding: 0 60px 30px 0; }
+  padding: 0 60px; }
   .about .page-content {
     padding-bottom: 20px; }
   .about .sub-title {
@@ -9534,7 +9534,13 @@ input[type="text"], textarea {
     font-weight: normal;
     color: #505050;
     text-align: center;
-    margin: auto; }
+    margin: 0 auto 40px; }
+    @media (max-width: 767px) {
+      .about .sub-title {
+        font-size: 28px; } }
+  @media (max-width: 767px) {
+    .about {
+      padding: 0 20px; } }
 
 .logo {
   width: 200px; }
