--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2506,7 +2506,7 @@ input[type="text"] , textarea{
 .about{
     box-shadow: 0 2px 40px 0 rgba(235, 235, 235, 0.5);
     background-color: #ffffff;
-    padding: 0 60px 30px 0;
+    padding: 0 60px;
     .page-content{
         padding-bottom: 20px;
     }
@@ -2515,6 +2515,12 @@ input[type="text"] , textarea{
         font-weight: normal;
         color: #505050;
         text-align: center;
-        margin: auto;
+        margin: 0 auto 40px;
+        @media (max-width: 767px){
+            font-size: 28px;
+        }
+    }
+    @media (max-width: 767px){
+        padding: 0 20px;
     }
 }
