--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -9725,7 +9725,10 @@ body:not(.page-template-front-page-home) header {
     border-bottom: 3px solid transparent;
     padding: 0;
     padding-bottom: 10px;
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    transition: all 0.3s ease; }
+    .site-menu ul.navbar-nav li a:hover {
+      color: #f16624; }
     .site-menu ul.navbar-nav li a.active {
       color: #f16624; }
   .site-menu ul.navbar-nav li ul li {
