--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -244,6 +244,10 @@ body:not(.page-template-front-page-home){
                 padding: 0;
                 padding-bottom: 10px;
                 margin-bottom: 10px;
+                transition: all 0.3s ease;
+                &:hover{
+                    color: $orange-3;
+                }
                 &.active{
                     color: $orange-3;
                 }
