--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -8427,7 +8427,7 @@ hr.line-separator {
               height: 5px;
               background: #f16624;
               left: 0;
-              border-radius: 8px; }
+              border-radius: 30px; }
             @media (max-width: 767px) {
               .services-page .detailed-page .services-block.left .title h2 {
                 font-size: 25px; } }
@@ -8472,7 +8472,7 @@ hr.line-separator {
               height: 5px;
               background: #f16624;
               right: 0;
-              border-radius: 8px; }
+              border-radius: 30px; }
             @media (max-width: 767px) {
               .services-page .detailed-page .services-block.right .title h2 {
                 font-size: 25px; } }
@@ -9570,7 +9570,7 @@ body:not(.page-template-front-page-home) header {
     body:not(.page-template-front-page-home) header .logo .sticky-logo {
       display: block; }
   body:not(.page-template-front-page-home) header .hamburger-menu > div {
-    background-color: #000; }
+    background-color: #f26624; }
   body:not(.page-template-front-page-home) header.sticky {
     position: sticky;
     top: 0;
@@ -9583,10 +9583,10 @@ body:not(.page-template-front-page-home) header {
       padding: 25px 0; } }
 
 .hamburger-menu > div {
-  background-color: #000; }
+  background-color: #f26624; }
 
 .page-template-template-press-php .hamburger-menu > div, .single .hamburger-menu > div {
-  background-color: #000; }
+  background-color: #f26624; }
 
 .home header, .page-template-front-page-home header, .page-template-front-page-version1-php header {
   position: absolute;
@@ -9607,7 +9607,7 @@ body:not(.page-template-front-page-home) header {
     .home header.sticky .logo .sticky-logo, .page-template-front-page-home header.sticky .logo .sticky-logo, .page-template-front-page-version1-php header.sticky .logo .sticky-logo {
       display: block; }
     .home header.sticky .hamburger-menu > div, .page-template-front-page-home header.sticky .hamburger-menu > div, .page-template-front-page-version1-php header.sticky .hamburger-menu > div {
-      background-color: black; }
+      background-color: #f26624; }
   @media (max-width: 991px) {
     .home header, .page-template-front-page-home header, .page-template-front-page-version1-php header {
       padding: 25px 0; } }
@@ -9662,7 +9662,7 @@ body:not(.page-template-front-page-home) header {
     background-color: #fff;
     margin: 5px 0;
     transition: 0.4s;
-    border-radius: 4px; }
+    border-radius: 30px; }
   .hamburger-menu .bar1 {
     margin-top: 0;
     width: 47px;
