--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -38,7 +38,7 @@ body:not(.page-template-front-page-home){
             }
         }
         .hamburger-menu > div{
-            background-color: #000;
+            background-color: #f26624;
         }
         &.sticky{
             position: sticky;
@@ -55,14 +55,14 @@ body:not(.page-template-front-page-home){
 }
 .hamburger-menu{
     > div {
-        background-color: #000;
+        background-color: #f26624;
         //display: none;
     }
 }
 .page-template-template-press-php , .single{
     .hamburger-menu{
         > div {
-            background-color: #000;
+            background-color: #f26624;
         }
     }
 }
@@ -91,7 +91,7 @@ body:not(.page-template-front-page-home){
             }
             .hamburger-menu{
                 > div {
-                    background-color: black;
+                    background-color: #f26624;
                 }
             }
         }
@@ -164,7 +164,7 @@ body:not(.page-template-front-page-home){
         background-color: #fff;
         margin: 5px 0;
         transition: 0.4s;
-        border-radius: 4px;
+        border-radius: 30px;
     }
     .bar1{
         margin-top: 0;
