--- a/wp-content/themes/toppeq/scss/_variables.scss
+++ b/wp-content/themes/toppeq/scss/_variables.scss
@@ -4,8 +4,8 @@ $secondary: theme-color("secondary");
 $link-color: theme-color("primary");
 $link-hover-color: lighten(theme-color("primary"), 20%);
 
-$font-family-base: 'Nunito Sans', sans-serif;
-$font-family-heading: 'Nunito Sans', sans-serif;
+$font-family-base: "Avenir LT Std";
+$font-family-heading: "Avenir LT Std";
 
 $text-silver: rgba(152, 152, 152, 0.4);
 $input-border: #979797;
