--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -14,7 +14,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Avenir LT Std";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -3203,7 +3203,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Avenir LT Std";
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -3288,7 +3288,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Avenir LT Std";
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
