--- a/wp-content/themes/toppeq/scss/theme/_global.scss
+++ b/wp-content/themes/toppeq/scss/theme/_global.scss
@@ -50,7 +50,7 @@ url("../fonts/AvenirLTStd-Book.woff2") format("woff2"),
 url("../fonts/AvenirLTStd-Book.woff") format("woff"),
 url("../fonts/AvenirLTStd-Book.ttf") format("truetype"),
 url("../fonts/AvenirLTStd-Book.svg#AvenirLTStd-Book") format("svg");
-font-weight: normal;
+font-weight: 600;
 font-style: normal;
 }
 
@@ -74,19 +74,7 @@ url("../fonts/AvenirLTStd-Roman.woff2") format("woff2"),
 url("../fonts/AvenirLTStd-Roman.woff") format("woff"),
 url("../fonts/AvenirLTStd-Roman.ttf") format("truetype"),
 url("../fonts/AvenirLTStd-Roman.svg#AvenirLTStd-Roman") format("svg");
-font-weight: normal;
-font-style: normal;
-}
-
-@font-face {
-font-family: "Avenir";
-src: url("../fonts/CooperHewitt-Bold.eot");
-src: url("../fonts/CooperHewitt-Bold.eot?#iefix") format("embedded-opentype"),
-url("../fonts/CooperHewitt-Bold.woff2") format("woff2"),
-url("../fonts/CooperHewitt-Bold.woff") format("woff"),
-url("../fonts/CooperHewitt-Bold.ttf") format("truetype"),
-url("../fonts/CooperHewitt-Bold.svg#CooperHewitt-Bold") format("svg");
-font-weight: bold;
+font-weight: 500;
 font-style: normal;
 }
 
