--- a/wp-content/themes/toppeq/scss/theme/_helpers.scss
+++ b/wp-content/themes/toppeq/scss/theme/_helpers.scss
@@ -100,3 +100,9 @@
         text-decoration: none;
     }
 }
+
+.image-shadow{
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.45);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.45);
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.45);
+}
