--- a/wp-content/themes/toppeq/scss/theme/_buttons.scss
+++ b/wp-content/themes/toppeq/scss/theme/_buttons.scss
@@ -17,6 +17,21 @@
             outline: 0;
         }
     }
+    &-sm{
+        min-width: 280px !important;
+        padding: 10px 10px !important;
+        font-size: 18px !important;
+        text-align: center;
+    }
+    &-outline-primary{
+        border: 1px solid #f16624 !important;
+        color: #000;
+        &:hover{
+            background-color: #f16624 !important;
+            color: #fff !important;
+        }
+
+    }
     @media (min-width: 768px) {
         min-width: 380px;
         padding: 20px 20px;
