--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2532,3 +2532,71 @@ input[type="text"] , textarea{
         padding: 0 20px;
     }
 }
+
+.openings{
+    &-row{
+        position: relative;
+        margin-bottom: 70px;
+        &-title{
+            border-bottom: 1px solid #000;
+            padding-bottom: 20px;
+        }
+    }
+    &-left{
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+    &-right{
+        padding-left: 60px;
+    }
+}
+
+.card{
+    &-header{
+        h5{
+            color: #f16624;
+            cursor: pointer;
+        }
+        h5[aria-expanded="true"]{
+            color: #000;
+        }
+    }
+    &-body{
+        padding-top: 30px;
+        h5{
+            font-weight: bold;
+            margin-bottom: 20px;
+            @media (max-width: 768px) {
+                margin-bottom: 15px;
+            }
+        }
+        p{
+            font-size: 18px;
+        }
+    }
+}
+
+.custom-list{
+    padding-left: 0;
+    list-style: none;
+    margin-bottom: 0;
+    li{
+        position: relative;
+        padding-left: 17px;
+        font-size: 18px;
+        margin-bottom: 20px;
+        &::before{
+            content: "-";
+            position: absolute;
+            top: 1px;
+            left: 0;
+        }
+        &:last-child{
+            margin-bottom: 0;
+        }
+        @media (max-width: 768px) {
+            margin-bottom: 15px;
+        }
+    }
+}
