--- a/wp-content/themes/toppeq/scss/theme/_buttons.scss
+++ b/wp-content/themes/toppeq/scss/theme/_buttons.scss
@@ -26,9 +26,13 @@
     &-outline-primary{
         border: 1px solid #f16624 !important;
         color: #000;
+        outline: 0;
+        box-shadow: none;
         &:hover{
             background-color: #f16624 !important;
             color: #fff !important;
+            outline: 0;
+            box-shadow: none;
         }
 
     }
