--- a/wp-content/themes/toppeq/scss/theme/_form.scss
+++ b/wp-content/themes/toppeq/scss/theme/_form.scss
@@ -292,3 +292,56 @@ textarea {
         -webkit-transform-origin: 0 0;
     }
 }
+
+.modal-body{
+    .frm_fields_container{
+        .form-field {
+            margin-bottom: 20px;
+        }
+        .frm_primary_label{
+            color: #CFCFCF;
+            font-weight: 300;
+            font-size: 16px;
+            margin-bottom: 5px;
+        }
+        input[type="text"] , input[type="email"], input[type="number"], input[type="tel"], textarea , select{
+            border-bottom: solid 1px $gray-500 !important;
+            box-shadow: none;
+            border: 0;
+            border-radius: 0px;
+            box-shadow: none;
+            outline: 0;
+            color: var(--font-color);
+            padding-left: 0;
+            font-size: 20px;
+            font-weight: 300;
+            &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+                opacity: 1; /* Firefox */
+                font-weight: 300;
+                color: var(--select-text-color);
+            }      
+            &:-ms-input-placeholder { /* Internet Explorer 10-11 */
+                font-size: 20px;
+                font-weight: 300;
+                color: var(--select-text-color);
+            }
+            &::-ms-input-placeholder { /* Microsoft Edge */
+                font-size: 20px;
+                font-weight: 300;
+                color: var(--select-text-color);
+            }
+            &:focus{
+                outline: 0 !important;
+                border: 0 !important;
+                border-bottom: 1px solid #f89ea6!important;
+                box-shadow: none!important;
+            }
+        }
+        .frm_style_formidable-style.with_frm_style .form-field input:not([type=file]):focus{
+            outline: 0 !important;
+            border: 0 !important;
+            border-bottom: 1px solid #f89ea6!important;
+            box-shadow: none!important;
+        }
+    }
+}
