--- a/wp-content/themes/toppeq/scss/theme/_buttons.scss
+++ b/wp-content/themes/toppeq/scss/theme/_buttons.scss
@@ -34,7 +34,10 @@
             outline: 0;
             box-shadow: none;
         }
-
+        &:focus{
+            outline: 0;
+            box-shadow: none;
+        }
     }
     @media (min-width: 768px) {
         min-width: 380px;
