--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2644,6 +2644,10 @@ input[type="text"] , textarea{
         .frm_submit{
             padding-top: 10px;
             padding-top: 20px;
+            button{
+                padding-top: 12px !important;
+                padding-bottom: 12px !important;
+            }
         }
         @media (min-width: 768px) {
             padding-top: 0;
@@ -2651,5 +2655,18 @@ input[type="text"] , textarea{
             padding-right: 25px;
             padding-bottom: 25px;
         }
+    }
+}
+
+
+.modal-white{
+    background: #fff;
+    .modal-dialog{
+        .modal-content{
+            border: 0;
+            border-radius: 0;
+            box-shadow: none;
+            box-shadow: 0 0 8px -2px rgba(193, 193, 193, 0.85);
+        }   
     }
 }
