--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2666,7 +2666,7 @@ input[type="text"] , textarea{
             border: 0;
             border-radius: 0;
             box-shadow: none;
-            box-shadow: 0 0 8px -2px rgba(193, 193, 193, 0.85);
+            box-shadow: 0 0 25px 0px rgba(193,193,193,0.85);
         }   
     }
 }
