--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2693,20 +2693,20 @@ input[type="text"] , textarea{
                 border: 5px solid #f16624;
                 border-radius: 50%;
                 .wpsm_number{
-                    margin-top: 0;
+                    margin-top: 0 !important;
                     order: 1;
-                    letter-spacing: 1px;
+                    letter-spacing: 1px !important;
                     @media (max-width: 400px) {
-                        font-size: 32px;
+                        font-size: 32px !important;
                     }
                 }
                 .wpsm_count-title{
-                    margin-top: 0;
-                    min-height: auto;
-                    font-size: 16px;
+                    margin-top: 0 !important;
+                    min-height: auto !important;
+                    font-size: 16px !important;
                     order: 0;
                     @media (max-width: 400px) {
-                        font-size: 14px;
+                        font-size: 14px !important;
                     }
                 }
                 @media (max-width: 400px) {
