Circle border color change

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2690,7 +2690,7 @@ input[type="text"] , textarea{
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
-                border: 5px solid #f16624;
+                border: 8px solid #ed8967;
                 border-radius: 50%;
                 .wpsm_number{
                     margin-top: 0 !important;
