--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2681,7 +2681,8 @@ input[type="text"] , textarea{
     .wpsm_counter_b_row{
         .wpsm_row{
             .wpsm_counterbox{
-                font-family: "Avenir LT Std";
+                font-family: "Avenir LT Std" !important;
+                
                 width: 280px;
                 height: 280px;
                 text-align: center;
@@ -2697,7 +2698,7 @@ input[type="text"] , textarea{
                     margin-top: 0 !important;
                     order: 1;
                     letter-spacing: 1px !important;
-                    font-family: "Avenir LT Std";
+                    font-family: "Avenir LT Std" !important;
                     @media (max-width: 400px) {
                         font-size: 32px !important;
                     }
@@ -2707,7 +2708,7 @@ input[type="text"] , textarea{
                     min-height: auto !important;
                     font-size: 16px !important;
                     order: 0;
-                    font-family: "Avenir LT Std";
+                    font-family: "Avenir LT Std" !important;
                     @media (max-width: 400px) {
                         font-size: 14px !important;
                     }
